# MonteRent

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.default.yml  docker-compose.yml  init.sql
db/: ensure_next_month_partition.sql
docker/loki/: loki-config.yaml
docker/mercure/: Caddyfile
docker/nginx/: default.conf  nginx.conf
docker/php-cli/: Dockerfile
docker/php-cli/askar/: .zcompdump-a5c70b0fe497-5.9  .zcompdump-a5c70b0fe497-5.9.zwc  .zshrc
docker/php-cli/conf.d/: custom-dev.ini
docker/php-fpm/: Dockerfile  supervisord.conf
docker/promtail/: promtail-config.yaml
docker/python-download-pictures-related-to-message-docker/: Dockerfile  requirements.txt
docker/python-parse-original-message-docker/: Dockerfile  requirements.txt
docker/python-scrap-telegram-docker/: Dockerfile  requirements.txt
python-parse-original-message/: .gitignore  README.md  ai-agentt.py  consumer.py
tests/python-ai-transformation-text/: .gitignore  pyproject.toml
tests/python-scrap-telegram-tests/: example_message.txt  example_message1.txt  pyproject.toml  readme.txt  test_python_diapason_min_max_m_id.py  test_python_scrap_telegram.py  topic_ids
